<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addcategory"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#F8F8F8">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="38dp"
        android:text="@string/Add_Category"
        android:textColor="@color/Black"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp" />

    <EditText
        android:id="@+id/categoryname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignStart="@+id/textView2" />


    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/confirm"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:background="#5CB85C"
        android:textColor="#FFFFFF"
        android:text="@string/Confirm"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/categoryname"
        android:layout_toEndOf="@+id/textView1"
        app:bootstrapBrand="success"
        app:roundedCorners="true"/>



    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:id="@+id/resetCategory"
        android:background="#D9534F"
        android:textColor="#FFFFFF"
        android:text="@string/Reset"
        app:bootstrapBrand="danger"
        app:roundedCorners="true"
        android:layout_alignTop="@+id/confirm"
        android:layout_toEndOf="@+id/confirm"
        android:layout_marginStart="44dp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="58dp"
        android:text="@string/Category_Name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginTop="57dp"
        android:layout_below="@+id/textView2"
        android:layout_toStartOf="@+id/textView2" />

</RelativeLayout>
