<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="900dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F8F8F8"
    android:orientation="horizontal"
    android:id="@+id/addproducts"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Categories"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignEnd="@+id/reset" />

    <Spinner
        android:id="@+id/categories"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignEnd="@+id/barcodedata"
        android:layout_marginEnd="49dp"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/Black"
        android:layout_marginTop="10dp"
        android:text="@string/Add_Products"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:singleLine="true"
        android:hint="@string/Product_Name"
        android:layout_alignTop="@+id/categories"
        android:layout_toStartOf="@+id/save">
    </EditText>

    <EditText
        android:id="@+id/weight"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:singleLine="true"
        android:hint="@string/Weight"
        android:inputType="numberSigned"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/name"
        android:layout_alignEnd="@+id/barcodedata">
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Quantity"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:layout_marginEnd="69dp"
        android:layout_alignTop="@+id/weight"
        android:layout_toStartOf="@+id/quantity" />

    <EditText
        android:id="@+id/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ems="10"
        android:hint="@string/Quantity"
        android:inputType="numberSigned"

        android:layout_alignBottom="@+id/units"
        android:layout_alignStart="@+id/name" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Price"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/price"
        android:layout_alignBottom="@+id/price"
        android:layout_alignStart="@+id/textView4" />

    <EditText
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:singleLine="true"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Price"
        android:inputType="numberDecimal"
        android:layout_alignTop="@+id/barcodedata"
        android:layout_alignStart="@+id/quantity"
        android:layout_alignEnd="@+id/quantity" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/save"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:text="@string/Save"
        android:textColor="#FFFFFF"
        android:layout_marginTop="26dp"
        app:bootstrapBrand="success"
        app:roundedCorners="true"
        android:layout_below="@+id/price"
        android:layout_toStartOf="@+id/reset" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/reset"
        android:layout_width="75dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:text="@string/Reset"
        app:bootstrapBrand="danger"
        app:roundedCorners="true"
        android:layout_alignTop="@+id/save"
        android:layout_alignEnd="@+id/textView1" />

    <Spinner
        android:id="@+id/units"
        android:layout_width="75dp"
        android:layout_height="35dp"
        android:layout_alignBaseline="@+id/weight"
        android:layout_alignBottom="@+id/weight"
        android:layout_toEndOf="@+id/barcodedata"
        android:layout_marginStart="29dp" />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/barcode"
        android:layout_width="136dp"
        android:layout_height="45dp"
        android:layout_marginLeft="7dp"
        android:text="@string/Barcode"
        android:textStyle="bold"
        android:drawableLeft="@drawable/barcode"
        app:roundedCorners="true"
        app:bootstrapBrand="secondary"
        app:showOutline="true"
        android:layout_alignTop="@+id/barcodedata"
        android:layout_toEndOf="@+id/weight" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textSize="20sp"
        android:id="@+id/textView6"
        android:layout_marginTop="76dp"

        android:textColor="#000000"
        android:layout_below="@+id/textView1"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Barcode"
        android:textSize="20sp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000000"
        android:layout_alignBaseline="@+id/price"
        android:layout_alignBottom="@+id/price"
        android:layout_alignStart="@+id/textView8" />

    <EditText
        android:id="@+id/barcodedata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Barcode"

        android:layout_marginTop="26dp"
        android:layout_below="@+id/weight"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Weight/Volume"
        android:textSize="20sp"
        android:id="@+id/textView8"
        android:textColor="#000000"
        android:layout_alignBaseline="@+id/units"
        android:layout_alignBottom="@+id/units"
        android:layout_alignStart="@+id/textView3" />


</RelativeLayout>


